test/expected/explain_main_fippi_i.out
explain int main( int, int** )
                           ^
28: error: this parameter of main() must be pointer to pointer to [const] char
